fix: app banner spacing & quick switcher shadow & server banner corner

--- a/src/content/header/sidebar-server.scss
+++ b/src/content/header/sidebar-server.scss
@@ -26,6 +26,7 @@
 .header_f37cb1 {
 	background-color: transparent;
 	border: none;
+	border-radius: 0;
 	padding: var(--spacing);
 
 	app-region: drag;
