--- a/src/controls/banners/app.scss
+++ b/src/controls/banners/app.scss
@@ -16,7 +16,6 @@
 // #region Server preview
 .back_c5cd6a {
 	margin: 0;
-	margin-right: var(--spacing);
 
 	position: unset;
 }
