--- a/src/dialogs/quick-switcher.scss
+++ b/src/dialogs/quick-switcher.scss
@@ -4,6 +4,7 @@
 	background-color: transparent;
 	border: none;
 	border-radius: 0;
+	box-shadow: none;
 }
 
 .input_ac6cb0 {
